# Kra

./: .editorconfig  .gitignore  .npmrc  CONTRIBUTING.md  README.md  SECURITY.md  app.json  eslint.config.mjs  firestore.indexes.json  firestore.rules  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml
.husky/: pre-commit  pre-push
apps/admin/: package.json
apps/mobile/: package.json
apps/web/: package.json
docs/01-product/: glossary.md  goals-and-success-metrics.md  problem-statement.md  project-overview.md  scope-v1-v2-v3.md
docs/02-users/: permissions-matrix.md  personas.md  station-operations-model.md  support-and-escalation-rules.md  user-roles.md
docs/03-business/: cancellation-rules.md  delivery-lifecycle.md  doorstep-delivery-rules.md  handoff-rules.md  package-statuses.md  pricing-rules.md  refund-and-dispute-rules.md  service-areas-and-stations.md
docs/04-features/: admin-dashboard-spec.md  doorstep-delivery-spec.md  driver-app-spec.md  (+7 more)
scripts/: check-api-env.mjs  check-api-runtime-imports.mjs  check-critical-coverage.mjs  check-frontend-domain-metadata.mjs  check-security-rules.mjs  patch-esm-extensions.mjs
services/ai/: pyproject.toml
services/ai/src/kra_ai/: __init__.py  policy.py
services/ai/src/kra_ai.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
services/ai/tests/: test_policy.py
(+355 files in other folders)
