[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "kra-ai"
version = "0.1.0"
description = "Staff-only AI workflows for Kra"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.3.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

